(i) querying multiple profiles at once (2/2) (ii) moving from string arithmetic to list arithmetic in history() for better performance

--- a/template_bookmarks.html
+++ b/template_bookmarks.html
@@ -44,6 +44,7 @@
                 <th scope="col">date</th>
                 <th scope="col">folder</th>
                 <th scope="col">url</th>
+                <th scope="col">profile</th>
             </tr>
         </thead>
         <tbody>
