--- a/template_history.html
+++ b/template_history.html
@@ -43,6 +43,7 @@
                 <th scope="col">link</th>
                 <th scope="col">date</th>
                 <th scope="col">url</th>
+                <th scope="col">profile</th>
             </tr>
         </thead>
         <tbody>
